# scalpers-time-machine-streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.gradio/flagged/: dataset1.csv  dataset2.csv
scalpers-time-machine/: - Copy.env  README.md
scalpers-time-machine/dist - Copy/: iris_predictor-0.1.0-py3-none-any.whl  iris_predictor_szinya-0.1.0-py3-none-any.whl
scalpers-time-machine/docs - Copy/: index.html  iris_predictor.html  scalpers_time_machine.html  search.js
scalpers-time-machine/docs - Copy/scalpers_time_machine/: config.html  data_loader.html  metrics.html  model.html
scalpers-time-machine/src - Copy/scalpers_time_machine/: config.py  data_loader.py  model.py
scalpers-time-machine/src - Copy/scalpers_time_machine/ui/: app.py
scalpers-time-machine/tests - Copy/: test_metrics.py  test_model.py
src/scalpers_time_machine/: __init__.py  data_loader.py  metrics.py
src/scalpers_time_machine/ui/: server_test.py  test.py
tests/: test_data_loader.py
