[tool.poetry]
name = "scalpers-time-machine"
version = "0.1.0"
description = ""
authors = ["SzilardTamasNagy241593 <241593@buas.nl>"]
readme = "README.md"
packages = [{ include = "scalpers_time_machine", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2"
numpy = "^1.26"
matplotlib = "^3.8"
scikit-learn = "^1.4"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
gradio = "^5.34.1"
plotly = "^6.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pdoc = "^15.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
